plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.sprint.mission'
version = '3.0-M12'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

repositories {
    mavenCentral()
}

ext {
    querydslVersion = '5.1.0'
    mapstructVersion = '1.5.3.Final'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.retry:spring-retry'
    implementation 'io.micrometer:micrometer-core'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.kafka:spring-kafka'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'

//    implementation("com.github.ben-manes.caffeine:caffeine:3.2.0")
//    implementation("com.github.ben-manes.caffeine:guava:3.2.0")
//    implementation("com.github.ben-manes.caffeine:jcache:3.2.0")

    implementation 'org.springframework.security:spring-security-messaging'

    testImplementation 'org.springframework.batch:spring-batch-test'
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'
    implementation 'io.lettuce:lettuce-core'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    implementation platform("software.amazon.awssdk:bom:2.31.14")
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:s3-transfer-manager'
    implementation 'software.amazon.awssdk:auth'       // AwsBasicCredentials
    implementation 'software.amazon.awssdk:regions'    // Region

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

//sourceSets {
//    main {
//        java {
//            srcDirs += "$buildDir/generated/sources/querydsl"
//        }
//    }
//}
//
//def querydslDir = "$buildDir/generated/sources/querydsl"
//
//task generateQuerydsl(type: JavaCompile) {
//    description = 'Generate Querydsl Q-classes'
//    group = 'build'
//
//    doFirst { file(querydslDir).mkdirs() }
//
//    source = sourceSets.main.allJava
//    classpath = sourceSets.main.compileClasspath
//    destinationDirectory = file(querydslDir)
//    options.annotationProcessorPath = configurations.annotationProcessor
//
//    // 👇  -proc:only 를 빼고, processor 하나만 지정
//    options.compilerArgs = [
//            '-processor', 'com.querydsl.apt.jpa.JPAAnnotationProcessor'
//    ]
//}
//
//compileJava {
//    dependsOn generateQuerydsl
//    source += fileTree(querydslDir)
//}
//
//classes {
//    dependsOn generateQuerydsl
//}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
    reports { xml.required = true; html.required = true }
}

// --------------------------------------------------
// 6) Clean 태스크에서 생성된 파일들 정리
// --------------------------------------------------
clean {
//    delete querydslDir
    delete 'build'
}

dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:3.4.5"
    }
}